--- a/src/app/account/finance-account/finance-account.html
+++ b/src/app/account/finance-account/finance-account.html
@@ -6,9 +6,9 @@
             <!-- Línea divisora -->
             <span class="bg-gray-details w-full h-0.5"></span>
     
-            <section class="w-full flex flex-col lg:flex-row justify-between gap-4 lg:gap-10 font-thin">
+            <section class="w-full flex flex-col lg:flex-col justify-between gap-4 lg:gap-4 font-thin">
                 <div class="w-full flex flex-col gap-2">
-                    <div class="w-full flex flex-col gap-2">
+                    <div class="w-1/2 flex flex-col gap-2">
                         <label for="presupuesto">Presupuesto mensual</label>
                         <input
                             [value]="presupuesto()"
@@ -20,7 +20,7 @@
                         >
                         <small>Cantidad máxima de gastos para el mes</small>
                     </div>
-                    <div class="w-full flex flex-col gap-2">
+                    <div class="w-1/2 flex flex-col gap-2">
                         <label for="ingresosMensuales">Ingresos mínimos</label>
                         <input
                             [value]="ingresosMensuales()"
@@ -35,7 +35,7 @@
                 </div>
     
                 <div class="w-full flex flex-col gap-2">
-                    <div class="w-full flex flex-col gap-2">
+                    <div class="w-1/2 flex flex-col gap-2">
                         <label for="egresosMensuales">Egresos máximos</label>
                         <input
                             [value]="egresosMensuales()"
@@ -47,7 +47,7 @@
                         >
                         <small>Límite de gastos que no deberías superar</small>
                     </div>
-                    <div class="w-full flex flex-col gap-2">
+                    <div class="w-1/2 flex flex-col gap-2">
                         <label for="ahorroMensual">Meta de ahorro mensual</label>
                         <input
                             [value]="ahorroMensual()"
@@ -65,32 +65,33 @@
         
         <!-- Ciclo de corte -->
         <section class="w-full flex flex-col items-start justify-center md:justify-start gap-4 text-white">
-            <h2 class="text-2xl">Ciclo de corte</h2>
-            <!-- Línea divisora -->
-            <span class="bg-gray-details w-full h-0.5"></span>
+            <!-- 
+                <h2 class="text-2xl">Ciclo de corte</h2>    
+                <span class="bg-gray-details w-full h-0.5"></span>
+        
+                <div class="w-full lg:w-2/5 flex flex-col font-thin gap-2">
+                    <label for="diaCorte">Día de corte</label>
+                    <select
+                        [value]="diaCorte()"
+                        name="diaCorte"
+                        formControlName="diaCorte"
+                        class="card w-full p-2 border-1 border-white rounded-lg">
+                        <option value="1">Día 1</option>
+                        <option value="5">Día 5</option>
+                        <option value="10">Día 10</option>
+                        <option value="15">Día 15</option>
+                        <option value="20">Día 20</option>
+                        <option value="25">Día 25</option>
+                        <option value="30">Día 30</option>
+                    </select>
+                    <small>Selecciona el día en que inicia tu nuevo ciclo</small>
+                </div>
     
-            <div class="w-full lg:w-2/5 flex flex-col font-thin gap-2">
-                <label for="diaCorte">Día de corte</label>
-                <select
-                    [value]="diaCorte()"
-                    name="diaCorte"
-                    formControlName="diaCorte"
-                    class="card w-full p-2 border-1 border-white rounded-lg">
-                    <option value="1">Día 1</option>
-                    <option value="5">Día 5</option>
-                    <option value="10">Día 10</option>
-                    <option value="15">Día 15</option>
-                    <option value="20">Día 20</option>
-                    <option value="25">Día 25</option>
-                    <option value="30">Día 30</option>
-                </select>
-                <small>Selecciona el día en que inicia tu nuevo ciclo</small>
-            </div>
+            -->
             <!-- Línea divisora -->
             <span class="bg-gray-details w-full h-0.5"></span>
-              
             <!-- Botón de guardar -->
-            <div class="w-full flex flex-col gap-3 items-center justify-center">
+            <div class="w-1/2 flex flex-col gap-3 items-start justify-center">
                 <button
                     type="submit"
                     class="card bg-green-primary px-4 py-2 rounded-xl w-full lg:max-w-150 text-[#292929]"
