--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -6,15 +6,10 @@
         <!-- Buscador y botones de notificaciones y usuario -->
         <div class="flex flex-row justify-between w-auto p-4 gap-2">
             <div class="buttons slide-in-down relative flex flex-row">
-                <input
-                    type="text"
-                    placeholder="Buscar"
-                    class="border-1 border-white rounded-full text-gray-300 p-3 pl-12 lg:pl-14 w-full lg:w-120"
+                <button 
+                    class="dynamic-btn group"
                 >
-                <button
-                    class="absolute top-2 left-2 flex items-center justify-center bg-white p-2 w-8 lg:w-10 h-8 lg:h-10 rounded-full"
-                >
-                    <i class='bx  bx-search'  ></i>
+                    <span class="relative z-10">Análisis con IA</span>
                 </button>
             </div>
             <div class="flex flex-row gap-2">
@@ -103,7 +98,7 @@
             <app-last-transactions></app-last-transactions>
         </div>
         <!-- Gráfico que visualiza los mayores gastos del mes -->
-        <div class="md:col-span-4 lg:col-span-2 lg:row-span-1 xl:col-span-2">
+        <div class="md:col-span-4 lg:col-span-3 lg:row-span-1 xl:col-span-2">
             <app-most-spendings></app-most-spendings>
         </div>
     </div>
