--- a/src/app/header-dashboard/header-dashboard.html
+++ b/src/app/header-dashboard/header-dashboard.html
@@ -1,7 +1,13 @@
 <div class="w-screen lg:w-full">
     <!-- Header que aparece en pantallas de escritorio -->
     <header class="desktop-menu flex flex-row gap-2 p-4">
-        <button class="bg-green-primary rounded-full p-3">Logo</button>
+        <button class="bg-green-primary rounded-full p-3 flex items-center justify-center">
+        <img 
+            src="Logo_Finnancer_Header.png" 
+            alt="logo" 
+            class="w-8 h-8"
+        >
+</button>
         <button (click)="goToTransactions()" class="menu rounded-full py-4 px-6 text-white font-thin">Transacciones</button>
         <button (click)="goToCategories()" class="menu rounded-full py-4 px-6 text-white font-thin">Categorías</button>
         <button (click)="goToPersons()" class="menu rounded-full py-4 px-6 text-white font-thin">Clientes y Proveedores</button>
