--- a/src/app/transactions/transactions.html
+++ b/src/app/transactions/transactions.html
@@ -186,7 +186,7 @@
                             <td class="font-thin p-4">{{transaccion.perfil}}</td>
                             <td class="font-thin p-4">{{transaccion.persona}}</td>
                             <td class="font-thin p-4">${{transaccion.monto_total}}</td>
-                            <td class="font-thin p-4">{{transaccion.fecha_transaccion}}</td>
+                            <td class="font-thin p-4">{{ transaccion.fecha_transaccion | date:'dd/MM/yyyy' }}</td>
                             <td class="font-thin p-4">{{transaccion.estatus}}</td>
                         </tr>
                     }
@@ -284,7 +284,7 @@
                                 <input
                                     type="number"
                                     formControlName="plazos"
-                                    class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500"
+                                    class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500 disabled:bg-gray-200"
                                 >
                             </div>
                         </div>
@@ -318,7 +318,8 @@
                         <span class="bg-gray-200 w-full h-0.5"></span>
                         <button
                             type="submit"
-                            class="card bg-green-primary p-4 rounded-2xl w-full font-medium"
+                            [disabled]="formNewTransaction.invalid"
+                            class="card bg-green-primary p-4 rounded-2xl w-full font-medium disabled:opacity-50"
                         >
                             Crear Transacción
                         </button>
@@ -401,7 +402,7 @@
                                 type="text"
                                 formControlName="categoria"
                                 placeholder="Categoría perteneciente"
-                                class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500">
+                                class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500 disabled:bg-gray-200">
                         </div>
     
                         <div class="w-full flex flex-col gap-2 items-start justify-start">
@@ -410,7 +411,7 @@
                                 type="text"
                                 formControlName="subcategoria"
                                 placeholder="Subcategoría perteneciente"
-                                class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500">
+                                class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500 disabled:bg-gray-200">
                         </div>
     
                         <div class="w-full flex flex-col gap-2 items-start justify-start">
@@ -418,7 +419,7 @@
                             <textarea
                                 placeholder="Ingrese la nueva nota de la transacción"
                                 formControlName="nota"
-                                class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500"></textarea>
+                                class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500 disabled:bg-gray-200"></textarea>
                         </div>
     
                         <div class="w-full flex flex-row gap-2 items-center justify-between">
@@ -429,7 +430,7 @@
                                     type="number"
                                     formControlName="montoTotal"
                                     placeholder="$0.00"
-                                    class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500"
+                                    class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500 disabled:bg-gray-200"
                                 >
                             </div>
                             <!-- Plazos -->
@@ -439,12 +440,15 @@
                                     type="number"
                                     formControlName="plazos"
                                     placeholder="0"
-                                    class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500"
+                                    class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500 disabled:bg-gray-200"
                                 >
                             </div>
                         </div>
     
-                        <button type="submit" class="card bg-green-primary p-3 rounded-2xl w-full font-medium">Guardar Cambios</button>
+                        <button
+                            type="submit"
+                            [disabled]="!puedeGuardar"
+                            class="card bg-green-primary p-3 rounded-2xl w-full font-medium disabled:opacity-50">Guardar Cambios</button>
     
                         <div class="w-full flex flex-row items-center justify-start gap-3 text-black">
                             @if (flujoTransaccionConsultada() === 'efectivo') {
@@ -466,14 +470,16 @@
                                 <button
                                     type="button"
                                     (click)="abonarCuota()"
-                                    class="card bg-green-primary p-3 rounded-2xl w-full font-medium">
+                                    [disabled]="!puedeAbonar"
+                                    class="card bg-green-primary p-3 rounded-2xl w-full font-medium: disabled:opacity-50">
                                     Abonar
                                 </button>
 
                                 <button
                                     type="button"
                                     (click)="cancelarTransaccion()"
-                                    class="card border-2 border-red-500 p-3 rounded-2xl w-full font-medium">
+                                    [disabled]="!puedeCancelar"
+                                    class="card border-2 border-red-500 p-3 rounded-2xl w-full font-medium disabled:opacity-45">
                                     Cancelar Transacción
                                 </button>
                             }
@@ -602,14 +608,14 @@
                                 <input
                                     formControlName="montoPagar"
                                     type="number"
-                                    class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500">
+                                    class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500 disabled:bg-gray-200">
                             </div>
                             <div class="w-full flex flex-col gap-2 items-start justify-start">
                                 <label for="">Monto pagado</label>
                                 <input
                                     formControlName="montoPagado"
                                     type="number"
-                                    class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500">
+                                    class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500 disabled:bg-gray-200">
                             </div>
                         </div>
 
@@ -643,7 +649,7 @@
                             <input
                                 formControlName="restante"
                                 type="number"
-                                class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500">
+                                class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500 disabled:bg-gray-200">
                         </div>
                         <div class="w-full flex flex-col gap-2 items-start justify-start">
                             <label>Abonar</label>
