Correcciones de bugs visuales en las categorias y subcategorías, que al crear una nueva, se agrega a la lista, y el bug del dashboard que muestra a veces el signo '+' cuando no debe.

--- a/src/app/categories/categories.html
+++ b/src/app/categories/categories.html
@@ -46,12 +46,14 @@
             <app-categories-table
                 (modalOpen)="openModalCategoria($event)"
                 (editarCategoria)="onEditarCategoria($event)"
+                [nuevaCategoria]="categoriaNueva"
             ></app-categories-table>
             <!-- Línea divisora -->
             <span class="bg-gray-details w-full h-0.5"></span>
             <app-subcategories-table
                 (modalOpen)="openModalSubcategoria($event)"
                 (editarSubcategoria)="onEditarSubcategoria($event)"
+                [nuevaSubcategoria]="subcategoriaNueva"
             ></app-subcategories-table>
         </section>
     </div>
